k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: service-event-management
  name: service-event-management
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service-event-management
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: service-event-management
    spec:
      containers:
      - image: susannekaiser/service-event-management
        name: service-event-management
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: service-event-management
  name: service-event-management
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: service-event-management
  type: NodePort
status:
  loadBalancer: {}
